[gd_scene load_steps=5 format=3 uid="uid://b1lcu4cgm3hjd"]

[ext_resource type="Script" uid="uid://i1jatov2sdot" path="res://components/weapon/weapon_handler.gd" id="1_3mhlk"]

[sub_resource type="Curve" id="Curve_5okns"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_uyyyf"]
curve = SubResource("Curve_5okns")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uhyea"]
particle_flag_disable_z = true
angle_min = 35.0
angle_max = 55.0
gravity = Vector3(0, 0, 0)
scale_min = 12.0
scale_max = 14.0
scale_curve = SubResource("CurveTexture_uyyyf")

[node name="WeaponHandler" type="Node2D" node_paths=PackedStringArray("flash", "muzzle", "fire_timer", "burst_timer", "sound")]
script = ExtResource("1_3mhlk")
flash = NodePath("Muzzle/Flash")
muzzle = NodePath("Muzzle")
fire_timer = NodePath("FireTimer")
burst_timer = NodePath("BurstTimer")
sound = NodePath("Sound")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(8, 0)

[node name="Flash" type="GPUParticles2D" parent="Muzzle"]
emitting = false
amount = 1
lifetime = 0.2
one_shot = true
process_material = SubResource("ParticleProcessMaterial_uhyea")

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="BurstTimer" type="Timer" parent="."]
one_shot = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
max_distance = 512.0
max_polyphony = 10

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_burst_timer_timeout"]
